<resources>
    <string name="app_name">MySignupApp</string>
    <string name="register">REGISTER</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
</resources>