<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/singupbg"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/profilephoto"
        android:src="@drawable/account_circle"/>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fname"
        android:layout_below="@id/profilephoto"
        android:background="#30ffffff"
        android:hint="@string/first_name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lname"
        android:layout_below="@id/fname"
        android:background="#30ffffff"
        android:hint="@string/last_name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_below="@id/lname"
        android:background="#30ffffff"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/baseline_alternate_email_24"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:layout_below="@id/email"
        android:background="#30ffffff"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/baseline_add_call_24"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:layout_below="@id/phone"
        android:background="#30ffffff"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/baseline_admin_panel_settings_24"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confpass"
        android:layout_below="@id/pass"
        android:background="#30ffffff"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/baseline_admin_panel_settings_24"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawablePadding="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="REGISTER"
        android:textSize="25dp"
        android:layout_below="@id/confpass"
        android:layout_alignParentRight="true"
        android:backgroundTint="@color/ocean_blue"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/register"
        android:textAlignment="center"
        android:gravity="center">

        <TextView
            android:id="@+id/acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account!"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Login"
            android:textColor="@color/ocean_blue"
            android:textSize="20dp"
            android:textStyle="bold" />


    </LinearLayout>
    </LinearLayout>




</RelativeLayout>